<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView  android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_name"
                    style="@style/LabelTextStyle"/>

                <TextView android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewName"
                    android:layout_weight="1"
                    style="@style/DataTextStyle"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_height"
                    style="@style/LabelTextStyle"/>

                <TextView android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewHeight"
                    android:layout_weight="1"
                    style="@style/DataTextStyle"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_mass"
                    style="@style/LabelTextStyle"/>

                <TextView android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewMass"
                    android:layout_weight="1"
                    style="@style/DataTextStyle"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_date"
                    style="@style/LabelTextStyle"/>

                <TextView android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewDate"
                    android:layout_weight="1"
                    style="@style/DataTextStyle"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_time"
                    style="@style/LabelTextStyle"/>

                <TextView android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewTime"
                    android:layout_weight="1"
                    style="@style/DataTextStyle"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
